add course number as a possible query parameter

--- a/docs.html
+++ b/docs.html
@@ -85,6 +85,11 @@
         <td style="text-align:left"><code>prefix=CMSC1</code></td>
         </tr>
         <tr>
+        <td style="text-align:left"><code>number</code> (optional)</td>
+        <td style="text-align:left">The course number to search for across multiple departments; for instance, <code>433</code> would match to courses like AOSC433, AREC433, etc.</td>
+        <td style="text-align:left"><code>number=433</code></td>
+        </tr>
+        <tr>
         <td style="text-align:left"><code>genEds</code> (optional)</td>
         <td style="text-align:left">A string of one or multiple comma-separated Gen-Eds to filter for; if multiple Gen-Eds are included, the API will return courses that satisfy all listed Gen-Eds.</td>
         <td style="text-align:left"><code>genEds=DVUP,DSSP</code></td>
@@ -673,5 +678,4 @@
         }
         ]
         </code></pre>
-    </body>
 </html>
