--- a/docs.html
+++ b/docs.html
@@ -702,6 +702,11 @@
         <td style="text-align:center">string</td>
         <td style="text-align:left">A unique 4-letter department code</td>
         </tr>
+        <tr>
+        <td style="text-align:left"><code>name</code></td>
+        <td style="text-align:center">string</td>
+        <td style="text-align:left">The full name of the department</td>
+        </tr>
         </tbody>
         </table>
 
